# FitLog

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
src/: db_manager.py
src/FitLog/: app.py  db_manager.py  progress_canvas.py
tests/: db_manager_test.py
