[project]
name = "FitLog"
version = "0.1.0"
description = "A cross-platform training tracking app using BeeWare Toga."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.12"
dependencies = [
    "toga",
    "briefcase"
]

[tool.briefcase]
project_name = "TrainingTracker"
bundle = "org.example"
author = "Dragomir Georgiev"


[tool.briefcase.app.FitLog]
formal_name = "Training Tracker"
bundle = "org.example.trainingtracker"
version = "0.1.0"
description = "A cross-platform training tracking app using BeeWare Toga."
sources = ["src/FitLog"]
app_module = "src.__main__"
